--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -1,10 +1,12 @@
-{
+
+   {
  "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Debug Qiskit Runtime jobs\n",
+    "{/* cspell:ignore ZIIIII, IZIIII,IIZIII, IIIZII, IIIIZI, IIIIIZ, rdiff */}\n",
     "\n",
     "Before submitting a resource-intensive Qiskit Runtime workload to execute on hardware, you can use the the Qiskit Runtime [`Neat` (Noisy Estimator Analyzer Tool)](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#neat) class to verify that your Estimator workload is set up correctly, is likely to return  accurate results, uses the most appropriate options for the specified problem, and more.\n",
     "\n",
