move the random seed spec lower

--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -1,5 +1,4 @@
-
-   {
+{
  "cells": [
   {
    "cell_type": "markdown",
@@ -34,7 +33,6 @@
    "source": [
     "import numpy as np\n",
     "import random\n",
-    "random.seed(10)\n",
     "\n",
     "from qiskit.circuit import QuantumCircuit\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
@@ -57,7 +55,10 @@
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "\n",
     "# Generate a preset pass manager\n",
-    "pm = generate_preset_pass_manager(backend=backend, optimization_level=0)"
+    "pm = generate_preset_pass_manager(backend=backend, optimization_level=0)\n",
+    "\n",
+    "# Set the random seed\n",
+    "random.seed(10)"
    ]
   },
   {
