--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9b3c4f91-e6a2-4e81-bae4-04848c03ff3d",
    "metadata": {},
    "source": [
     "# Debug Qiskit Runtime jobs\n",
@@ -13,11 +14,12 @@
     "\n",
     "`Neat` uses `qiskit-aer` to classically simulate Cliffordized circuits for an estimation task efficiently in both ideal ([`ideal_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#ideal_sim)) and noisy ([`noisy_sim`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#noisy_sim)) conditions. The simulated results support mathematical operations, and can therefore be compared with each other (or with experimental results) to calculate figures of merit.\n",
     "\n",
-    "The following examples illustrate situations where `Neat` can be a useful resource. "
+    "The following examples illustrate situations where `Neat` can be a useful resource."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "0e566aa2-3a0e-4ede-bf8b-c5d2988dd50e",
    "metadata": {},
    "source": [
     "## Define the estimation problem\n",
@@ -28,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "653dea9f-caba-4ba5-9681-80f6c90e867b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "c5d0e164-8f0b-45b9-a93d-768cfdeed57d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bda932ca-5de6-4d3c-9067-91ec4a1759f3",
    "metadata": {},
    "source": [
     "## Initialize a target circuit\n",
@@ -76,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "e456726b-98c6-4e17-b8d4-39167e117800",
    "metadata": {},
    "outputs": [
     {
@@ -93,34 +99,38 @@
    "source": [
     "def generate_circuit(n_qubits, n_layers):\n",
     "    r\"\"\"\n",
-    "    A function to generate a pseudo-random a circuit with ``n_qubits`` qubits and \n",
+    "    A function to generate a pseudo-random a circuit with ``n_qubits`` qubits and\n",
     "    ``2*n_layers`` entangling layers of the type used in this notebook.\n",
     "    \"\"\"\n",
     "    # An array of random angles\n",
-    "    angles = [[random.random() for q in range(n_qubits)] for s in range(n_layers)]\n",
+    "    angles = [\n",
+    "        [random.random() for q in range(n_qubits)] for s in range(n_layers)\n",
+    "    ]\n",
     "\n",
     "    qc = QuantumCircuit(n_qubits)\n",
     "    qubits = list(range(n_qubits))\n",
     "\n",
     "    # do random circuit\n",
     "    for layer in range(n_layers):\n",
-    "\n",
     "        # rotations\n",
     "        for q_idx, qubit in enumerate(qubits):\n",
     "            qc.rz(angles[layer][q_idx], qubit)\n",
     "\n",
     "        # cx gates\n",
-    "        control_qubits = qubits[::2] if layer % 2 == 0 else qubits[1:n_qubits-1:2]\n",
+    "        control_qubits = (\n",
+    "            qubits[::2] if layer % 2 == 0 else qubits[1 : n_qubits - 1 : 2]\n",
+    "        )\n",
     "        for qubit in control_qubits:\n",
-    "            qc.cx(qubit, qubit+1)\n",
+    "            qc.cx(qubit, qubit + 1)\n",
     "\n",
     "    # undo random circuit\n",
     "    for layer in range(n_layers)[::-1]:\n",
-    "\n",
     "        # cx gates\n",
-    "        control_qubits = qubits[::2] if layer % 2 == 0 else qubits[1:n_qubits-1:2]\n",
+    "        control_qubits = (\n",
+    "            qubits[::2] if layer % 2 == 0 else qubits[1 : n_qubits - 1 : 2]\n",
+    "        )\n",
     "        for qubit in control_qubits:\n",
-    "            qc.cx(qubit, qubit+1)\n",
+    "            qc.cx(qubit, qubit + 1)\n",
     "\n",
     "        # rotations\n",
     "        for q_idx, qubit in enumerate(qubits):\n",
@@ -128,14 +138,15 @@
     "\n",
     "    return pm.run(qc)\n",
     "\n",
+    "\n",
     "# An example of random circuit\n",
     "isa_qc = generate_circuit(6, 3)\n",
-    "isa_qc.draw(\"mpl\", idle_wires=0)\n",
-    "\n"
+    "isa_qc.draw(\"mpl\", idle_wires=0)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "e4935708-669b-4839-acd6-c2249e2b5c2d",
    "metadata": {},
    "source": [
     "Choose single-Pauli `Z` errors as observables and use them to initialize the primitive unified blocs (PUBs)."
@@ -144,6 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "6f424f2d-f483-4ae3-be56-471ffb9bc397",
    "metadata": {},
    "outputs": [
     {
@@ -168,6 +180,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d6d1944-b02a-4bcd-b648-5a735bb0626a",
    "metadata": {},
    "source": [
     "## Cliffordize the PUBs\n",
@@ -177,6 +190,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d63861f-4be4-49c5-8243-7a31f7a2b798",
    "metadata": {},
    "source": [
     "The defined PUB circuit is not Clifford. To take advantage of the most efficient simulation methods, use `Neat`'s [`to_clifford`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.debug_tools.Neat#to_clifford) method to map it to a Clifford circuit.\n",
@@ -187,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "868e3490-047a-4eec-b037-8b1277790051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +215,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44f78f03-94fe-4501-9764-09a6a5b5af14",
    "metadata": {},
    "source": [
     "Next, Cliffordize the PUBs."
@@ -208,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "edc076fd-2ad6-4e0b-9d14-1151c0cd3785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +235,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1355b3b7-cd22-4c42-b516-7746f3936515",
    "metadata": {},
    "source": [
     "## Application I. Analyze the impact of noise on the circuits outputs\n",
@@ -230,6 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "0ae3e992-3209-48f4-bfff-7f68f9de69d4",
    "metadata": {},
    "outputs": [
     {
@@ -262,9 +281,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40ec3432-f4a3-4088-8059-db906defe130",
    "metadata": {},
    "source": [
-    "These results support mathematical operators and can be used to compute figures of merit. \n",
+    "These results support mathematical operators and can be used to compute figures of merit.\n",
     "In the reminder of the guide, we will use the relative difference as a figure of merit to compare ideal results with noisy or experimental results, but similar figures of merit can be set up in a similar way.\n",
     "\n",
     "The relative difference shows that the impact of noise grows with the circuits' sizes."
@@ -273,6 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "c78bbb86-c632-4c49-bb43-3ab9532d9b4f",
    "metadata": {},
    "outputs": [
     {
@@ -301,22 +322,28 @@
     "# Figure of merit: Relative difference\n",
     "def rdiff(res1, re2):\n",
     "    r\"\"\"The relative difference between `res1` and re2`.\n",
-    "    \n",
+    "\n",
     "    --> The closer to `0`, the better.\n",
     "    \"\"\"\n",
     "    d = abs(res1 - re2) / res1\n",
     "    return np.round(d.vals * 100, 2)\n",
     "\n",
-    "for idx, (ideal_res, noisy_res) in enumerate(zip(ideal_results, noisy_results)):\n",
+    "\n",
+    "for idx, (ideal_res, noisy_res) in enumerate(\n",
+    "    zip(ideal_results, noisy_results)\n",
+    "):\n",
     "    vals = rdiff(ideal_res, noisy_res)\n",
     "\n",
     "    # we print the mean relative difference for the various observables\n",
     "    mean_vals = np.round(np.mean(vals), 2)\n",
-    "    print(f\"Mean rel. diff. between ideal and noisy results:\\n  {mean_vals}%\\n\")"
+    "    print(\n",
+    "        f\"Mean rel. diff. between ideal and noisy results:\\n  {mean_vals}%\\n\"\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "ccfbe164-34b0-4a21-9529-d4f015ca4a2b",
    "metadata": {},
    "source": [
     "You can specify different noise models in the analyzer. For example, you can study the impact of depolarizing noise on our PUBs."
@@ -325,6 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "d1051097-7111-498f-8177-3cbad849bd36",
    "metadata": {},
    "outputs": [
     {
@@ -353,11 +381,13 @@
     "# Set up a noise model with strength 0.02 on every two-qubit gate\n",
     "noise_model = NoiseModel()\n",
     "for qubits in backend.coupling_map:\n",
-    "    noise_model.add_quantum_error(depolarizing_error(0.02, 2), [\"ecr\", \"cx\"], qubits)\n",
+    "    noise_model.add_quantum_error(\n",
+    "        depolarizing_error(0.02, 2), [\"ecr\", \"cx\"], qubits\n",
+    "    )\n",
     "\n",
     "# Update the analyzer's noise model\n",
     "analyzer.noise_model = noise_model\n",
-    "    \n",
+    "\n",
     "# Perform a noiseless simulation\n",
     "ideal_results = analyzer.ideal_sim(clifford_pubs)\n",
     "\n",
@@ -365,16 +395,21 @@
     "noisy_results = analyzer.noisy_sim(clifford_pubs)\n",
     "\n",
     "# Compare the results\n",
-    "for idx, (ideal_res, noisy_res) in enumerate(zip(ideal_results, noisy_results)):\n",
+    "for idx, (ideal_res, noisy_res) in enumerate(\n",
+    "    zip(ideal_results, noisy_results)\n",
+    "):\n",
     "    vals = rdiff(ideal_res, noisy_res)\n",
     "\n",
     "    # we print the mean relative difference for the various observables\n",
     "    mean_vals = np.round(np.mean(vals), 2)\n",
-    "    print(f\"Mean rel. diff. between ideal and noisy results:\\n  {mean_vals}%\\n\")"
+    "    print(\n",
+    "        f\"Mean rel. diff. between ideal and noisy results:\\n  {mean_vals}%\\n\"\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "ce26d190-965c-4291-905c-959975f5f5dc",
    "metadata": {},
    "source": [
     "As shown, given a noise model, one can try to quantify the impact of noise on the (Cliffordized version of the) PUBs of interest before running them on a QPU."
@@ -382,6 +417,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2037373d-686f-47ba-9516-ae8cd4a0659c",
    "metadata": {},
    "source": [
     "### Application 2. Benchmark different strategies\n",
@@ -392,6 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "db320a15-4a14-4129-bf6d-e71fa0c10115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,6 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "d63f55da-7744-46e2-a2f3-7362911e470a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,6 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "3fb22cc4-6c81-489c-beba-23c53a0c965e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,6 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "a326fd18-30cf-470b-af54-47ac5b113f78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,6 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "a9344fbf-06ad-44c9-bd86-c3a50527d184",
    "metadata": {},
    "outputs": [
     {
@@ -483,11 +524,14 @@
     "# By looking at the mean relative difference we can quickly tell the best choice for our options\n",
     "for factors, res in zip(noise_factors, results):\n",
     "    d = rdiff(ideal_results[0], res[0])\n",
-    "    print(f\"Mean rel. diff. for factors {factors}:\\n  {np.round(np.mean(d), 2)}%\\n\")"
+    "    print(\n",
+    "        f\"Mean rel. diff. for factors {factors}:\\n  {np.round(np.mean(d), 2)}%\\n\"\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "4542a9c8-273f-4fef-9954-6ca420dd5b4f",
    "metadata": {},
    "source": [
     "The result with the smallest difference would help us decide which options to choose."
@@ -497,7 +541,7 @@
  "metadata": {
   "description": "Use the Qiskit Runtime Debugging tools module and `Neat` class to debug and analyze jobs.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Debug Qiskit Runtime jobs"
  },
