Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -238,7 +238,7 @@
    "id": "1355b3b7-cd22-4c42-b516-7746f3936515",
    "metadata": {},
    "source": [
-    "## Application I. Analyze the impact of noise on the circuits outputs\n",
+    "## Application 1: Analyze the impact of noise on the circuit outputs\n",
     "\n",
     "This example shows how to use `Neat` objects to study the impact of different noise models on PUBs as a function of circuit depth. This can be useful to set up expectations on the quality of the experimental results before running a job on a QPU.\n",
     "\n",
@@ -285,7 +285,7 @@
    "metadata": {},
    "source": [
     "These results support mathematical operators and can be used to compute figures of merit.\n",
-    "In the reminder of the guide, we will use the relative difference as a figure of merit to compare ideal results with noisy or experimental results, but similar figures of merit can be set up in a similar way.\n",
+    "The remainder of the guide uses the relative difference as a figure of merit to compare ideal results with noisy or experimental results, but similar figures of merit can be set up in a similar way.\n",
     "\n",
     "The relative difference shows that the impact of noise grows with the circuits' sizes."
    ]
@@ -346,7 +346,7 @@
    "id": "ccfbe164-34b0-4a21-9529-d4f015ca4a2b",
    "metadata": {},
    "source": [
-    "You can specify different noise models in the analyzer. For example, you can study the impact of depolarizing noise on our PUBs."
+    "You can specify different noise models in the analyzer. For example, you can study the impact of depolarizing noise on your PUBs."
    ]
   },
   {
@@ -412,7 +412,7 @@
    "id": "ce26d190-965c-4291-905c-959975f5f5dc",
    "metadata": {},
    "source": [
-    "As shown, given a noise model, one can try to quantify the impact of noise on the (Cliffordized version of the) PUBs of interest before running them on a QPU."
+    "As shown, given a noise model, you can try to quantify the impact of noise on the (Cliffordized version of the) PUBs of interest before running them on a QPU."
    ]
   },
   {
@@ -420,9 +420,9 @@
    "id": "2037373d-686f-47ba-9516-ae8cd4a0659c",
    "metadata": {},
    "source": [
-    "### Application 2. Benchmark different strategies\n",
+    "## Application 2: Benchmark different strategies\n",
     "\n",
-    "This example uses `Neat` to help identify the best options for our PUBs. To do so, consider running an estimation problem with PEA. Which noise amplification factors will  work best?"
+    "This example uses `Neat` to help identify the best options for your PUBs. To do so, consider running an estimation problem with PEA. Which noise amplification factors will  work best?"
    ]
   },
   {
@@ -521,7 +521,7 @@
     }
    ],
    "source": [
-    "# By looking at the mean relative difference we can quickly tell the best choice for our options\n",
+    "# Look at the mean relative difference to quickly tell the best choice for your options\n",
     "for factors, res in zip(noise_factors, results):\n",
     "    d = rdiff(ideal_results[0], res[0])\n",
     "    print(\n",
@@ -534,7 +534,7 @@
    "id": "4542a9c8-273f-4fef-9954-6ca420dd5b4f",
    "metadata": {},
    "source": [
-    "The result with the smallest difference would help us decide which options to choose."
+    "The result with the smallest difference helps you decide which options to choose."
    ]
   }
  ],
