Apply suggestions from code review

--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -24,7 +24,7 @@
     "Internally, these fractional gates work by directly executing an $R_{ZZ}(\\theta)$ and $R_X(\\theta)$ rotation for an arbitrary angle. Use of the $R_X(\\theta)$ gate can reduce the duration and error for single-qubit rotations of arbitrary angle by up to a factor of two. The direct execution of the $R_{ZZ}(\\theta)$ gate rotation avoids decomposition into multiple `CZGate`s, similarly reducing a circuit's duration and error. This is especially useful for circuits that contain many single- and two-qubit rotations, such as when simulating the dynamics of a quantum system or when using a variational ansatz with many parameters.\n",
     "\n",
     "\n",
-    "While these types of gates are in the [library of standard gates](./circuit-library) which a `QuantumCircuit` can possess, they can only be used on specific IBM Quantum QPUs which must be loaded with the flag `use_fractional_gates` set to `True` (shown below). This flag will ensure that fractional gates are included in the backend's `Target` for the transpiler.\n",
+    "While these types of gates are in the [library of standard gates](./circuit-library) which a `QuantumCircuit` can possess, they can only be used on specific IBM Quantum QPUs, and which must be loaded with the flag `use_fractional_gates` set to `True` (shown below). This flag will ensure that fractional gates are included in the backend's `Target` for the transpiler.\n",
     "\n",
     "```python\n",
     "service = QiskitRuntimeService()\n",
@@ -36,7 +36,7 @@
     "<Admonition title=\"Note about reported error rates\" type=\"note\">\n",
     "  The error value reported in the `Target` of a backend with fractional gates enabled is just a copy of the non-fractional gate's counterpart (which may not be the same). This is because the reporting of error rates on the fractional gates is not yet supported.\n",
     "\n",
-    "  However, since the gate time of fractional vs non-fractional gates are the same, it is a reasonable assumption that their error rates are comparable -- especially when the dominant source of error in a circuit is due to relaxation.\n",
+    "  However, since the gate time of fractional versus non-fractional gates are the same, it is a reasonable assumption that their error rates are comparable -- especially when the dominant source of error in a circuit is due to relaxation.\n",
     "</Admonition>"
    ]
   },
@@ -91,7 +91,7 @@
    "id": "983bbe11-fa20-4043-a146-66af18cae054",
    "metadata": {},
    "source": [
-    "Next, specify two backend objects: one with fractional gates enabled, and the other with them disabled, then transpile them both."
+    "Specify two backend objects: one with fractional gates enabled, and the other with them disabled, then transpile them both."
    ]
   },
   {
@@ -191,7 +191,7 @@
    "source": [
     "## Where to use fractional gates\n",
     "\n",
-    "Historically, the basis gates available on IBM Quantum QPUs have been **`CZ`**, **`X`**, **`RZ`**, **`SX`**, and **`ID`**, which can not efficiently represent circuits with single and two-qubit rotations that are not multiples of $\\pi / 2$. For example, an $R_X(\\theta)$ gate, when transpiled, must decompose into a series of $RZ$ and $\\sqrt{X}$ gates -- creating a circuit with two gates of finite duration instead of one.\n",
+    "Historically, the basis gates available on IBM Quantum QPUs have been **`CZ`**, **`X`**, **`RZ`**, **`SX`**, and **`ID`**, which can not efficiently represent circuits with single- and two-qubit rotations that are not multiples of $\\pi / 2$. For example, an $R_X(\\theta)$ gate, when transpiled, must decompose into a series of $RZ$ and $\\sqrt{X}$ gates, which creates a circuit with two gates of finite duration instead of one.\n",
     "\n",
     "Similarly, when two-qubit rotations such as an $R_{ZZ}(\\theta)$ gate are transpiled, the decomposition requires two **`CZ`** gates and several single-qubit gates, which increases the circuit depth. These decompositions are shown in the following code."
    ]
@@ -313,7 +313,7 @@
    "id": "5bc4f276-80e4-49af-bd5c-d9dceedc9aa3",
    "metadata": {},
    "source": [
-    "For workflows that require many single-qubit $R_X(\\theta)$ or two-qubit rotations (such as in a variational ansatz or when simulating the time evolution of quantum systems), this constraint causes the circuit depth to grow rapidly. However, fractional gates remove this requirement, because the single- and two-qubit rotations are executed directly, and thus create a more efficient (and thus error-suppressed) quantum circuit."
+    "For workflows that require many single-qubit $R_X(\\theta)$ or two-qubit rotations (such as in a variational ansatz or when simulating the time evolution of quantum systems), this constraint causes the circuit depth to grow rapidly. However, fractional gates remove this requirement, because the single- and two-qubit rotations are executed directly, and create a more efficient (and thus error-suppressed) quantum circuit."
    ]
   },
   {
@@ -323,16 +323,15 @@
    "source": [
     "## When *not* to use fractional gates\n",
     "\n",
-    "It is important to note that fractional gates are an *experimental* feature and the behavior of the `use_fractional_gates` flag may change in the future. Look to the [release notes](/api/qiskit-ibm-runtime/release-notes) for new versions of Qiskit Runtime for more information.\n",
+    "It is important to note that fractional gates are an *experimental* feature and the behavior of the `use_fractional_gates` flag may change in the future. Look to the [release notes](/api/qiskit-ibm-runtime/release-notes) for new versions of Qiskit Runtime for more information. See also the API reference documentation for [QiskitRuntimeService.backend](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backend), which describes `use_fractional_gates`.\n",
     "\n",
-    "Additionally, the Qiskit transpiler has limited capability to utilize $R_{ZZ}(\\theta)$ in its optimization passes. This requires you to take more care in crafting and optimizing circuits that contain these instructions.\n",
+    "Additionally, the Qiskit transpiler has limited capability to use $R_{ZZ}(\\theta)$ in its optimization passes. This requires you to take more care in crafting and optimizing circuits that contain these instructions.\n",
     "\n",
     "Lastly, using fractional gates is not supported for:\n",
     "- [Dynamic circuits](/guides/classical-feedforward-and-control-flow)\n",
-    "- [Pauli twirling](/guides/error-mitigation-and-suppression-techniques#pauli-twirling)\n",
-    "  - However, [measurement twirling with TREX](/guides/error-mitigation-and-suppression-techniques#twirled-readout-error-extinction-trex) *is* supported.\n",
+    "- [Pauli twirling](/guides/error-mitigation-and-suppression-techniques#pauli-twirling) - however, [measurement twirling with TREX](/guides/error-mitigation-and-suppression-techniques#twirled-readout-error-extinction-trex) *is* supported.\n",
     "- [Probabilistic error cancellation](/guides/error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec)\n",
-    "- [Zero noise extrapolation (using probabilistic error amplification)](/guides/error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea)\n",
+    "- [Zero-noise extrapolation (using probabilistic error amplification)](/guides/error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea)\n",
     "\n",
     "Read the guide on [primitive options](/guides/runtime-options-overview) to learn more about customizing the error mitigation and suppression techniques for a given quantum workload."
    ]
@@ -345,15 +344,15 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  -  To learn more about transpilation, see the [introduction to transpilation](/guides/transpile) page\n",
-    "  -  Or take a look at the page on [writing a custom transpiler pass](/guides/custom-transpiler-pass)\n",
-    "  -  Understand how to [configure error mitigation](/guides/configure-error-mitigation) for Qiskit Runtime\n",
+    "  -  To learn more about transpilation, see the [introduction to transpilation](/guides/transpile) page.\n",
+    "  -  Read about [writing a custom transpiler pass](/guides/custom-transpiler-pass).\n",
+    "  -  Understand how to [configure error mitigation](/guides/configure-error-mitigation) for Qiskit Runtime.\n",
     "</Admonition>"
    ]
   }
  ],
  "metadata": {
-  "description": "Use fractional gates to execute single and two-qubit rotations",
+  "description": "Use fractional gates to execute single- and two-qubit rotations",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
