Add note about setting fractional gates flag (#1737)
Closes #1527 

~~Currently blocked by #1734 which will need to be merged before CI
passes.~~

Utilizing fractional gates is a flag that is set when requesting a
backend from a `QiskitRuntimeService()` instance and there didn't appear
to be a clear page for a flag to be explained. I ended up adding it as
an admonition to the "get started with primitives" page.

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -11,6 +11,16 @@
     "\n",
     "<Admonition type=\"note\">\n",
     "    While this documentation uses the primitives from Qiskit Runtime, which allow you to use IBM&reg; backends, the primitives can be run on any provider by using the [backend primitives](#backend) instead.  Additionally, you can use the *reference* primitives to run on a local statevector simulator.  See [Exact simulation with Qiskit primitives](simulate-with-qiskit-sdk-primitives) for details.\n",
+    "</Admonition>\n",
+    "\n",
+    "<Admonition type=\"note\" title=\"Using Fractional Gates\">\n",
+    "    If you wish to use the newly supported [fractional gates](./fractional-gates), you will need to set `use_fractional_gates=True` when requesting a backend from a `QiskitRuntimeService` instance. For example:\n",
+    "    ``` python\n",
+    "    service = QiskitRuntimeService()\n",
+    "    fractional_gate_backend = service.least_busy(use_fractional_gates=True)\n",
+    "    ```\n",
+    "\n",
+    "    However, note that this is an experimental feature and may change in the future.\n",
     "</Admonition>"
    ]
   },
