--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -510,6 +510,22 @@
    "source": [
     "The result with the smallest difference helps you decide which options to choose."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"tip\" title=\"Recommendations\">\n",
+    "    - Learn about [Exact and noisy simulation with Qiskit Aer primitives.](https://docs.quantum.ibm.com/guides/simulate-with-qiskit-aer)\n",
+    "    - Learn about [available Qiskit Runtime options.](/guides/runtime-options-overview)\n",
+    "    - Learn about [Error mitigation and suppression techniques.](/guides/error-mitigation-and-suppression-techniques)\n",
+    "    - Visit the [Transpile with pass managers](transpile-with-pass-managers) topic.\n",
+    "    - Learn [how to transpile circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) as part of Qiskit Patterns workflows using Qiskit Runtime.\n",
+    "    - Review the [Debugging tools API documentation.](/api/qiskit-ibm-runtime/debug_tools)\n",
+    "</Admonition>"
+   ]
   }
  ],
  "metadata": {
